--- a/index.html
+++ b/index.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html>
 <!-- angular -->
-
+<script type="text/javascript" src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+<script type="text/javascript" src=""></script>
 <script src="node_modules/angular/angular.min.js"></script>
+<script src="./lib/js/all.js"></script>
+
+<!-- css -->
+<link rel="stylesheet" type="text/css" href="./lib/less/css/style.css">
 <body>
 
-<div ng-app="myApp" ng-controller="myCtrl"> 
-
-<p>Today's welcome message is:</p>
-
-<h1>{{myWelcome}}</h1>
-
-</div>
-
-<p>The $http service requests a page on the server, and the response is set as the value of the "myWelcome" variable.</p>
-
-<script>
-var app = angular.module('myApp', []);
-app.controller('myCtrl', function($scope, $http) {
-  $http({
-    method : "GET",
-    url : "http://dev-kevinsandbox.pantheon.io/api/node"
-  }).then(function mySucces(response) {
-      $scope.myWelcome = response.data;
-    }, function myError(response) {
-      $scope.myWelcome = response.statusText;
-  });
-});
-</script>
-
+    <!-- Begin page content -->
+    <div class="container">
+      <div class="page-header">
+        <h1>Love the garden</h1>
+      </div>
+      <p class="lead">Below is a list of nodes from an API set <a href="http://dev-kevinsandbox.pantheon.io/api/node">here</a></p>
+       <div ng-app="myApp" ng-controller="myCtrl" class="row"> 
+		<ng-view></ng-view>
+	</div>
+    </div>   
+    <footer class="footer">
+      <div class="container">
+        <p class="text-muted">Place sticky footer content here.</p>
+      </div>
+    </footer>
 </body>
 </html>
