--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <script type="text/javascript" src=""></script>
 
 <script src="node_modules/angular/angular.min.js"></script>
+<script src="./lib/ui-bootstrap/ui-bootstrap-custom-1.1.1.js"></script>
+<script src="./lib/ui-bootstrap/ui-bootstrap-custom-tpls-1.1.1.js"></script>
+
 <script src="node_modules/angular-route/angular-route.min.js"></script>
 
 <script src="./lib/js/all.js"></script>
@@ -19,14 +22,17 @@
         <h1><a href="/">Love the garden</h1></a>
       </div>
       <p class="lead">Below is a list of nodes from an API set <a href="http://dev-kevinsandbox.pantheon.io/api/node">here</a></p>
+      <p>The API on the external site has CORS enabled so we can send http request from another location</p>
+      <br>
       <div ng-app="myApp"> 
 		<ng-view></ng-view>
+		<br>
 	</div>
     </div>
 
     <footer class="footer">
       <div class="container">
-        <p class="text-muted">Place sticky footer content here.</p>
+        <p class="text-muted">kevin@ndp-studio.com</p>
       </div>
     </footer>
 </body>
