filter almost working

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       <div class="page-header">
         <h1><a href="/">Love the garden</h1></a>
       </div>
-      <p class="lead">Below is a list of nodes from an API set <a href="http://dev-kevinsandbox.pantheon.io/api/node">here</a></p>
-      <p>The API on the external site has CORS enabled so we can send http request from another location</p>
+      <p class="lead">Below is a list of nodes set in app.js </p>
+   
       <br>
       <div ng-app="myApp"> 
 		<ng-view></ng-view>
